# smart-photo-forensics-assistant

./: .gitignore  README.md  main.py
agents/: analyse_photo_agent.py  upload_agent.py
config/: config.py
flask-app/: pyproject.toml
flask-app/app/: __init__.py  config.py  rekognise_utils.py  routes.py  s3_utils.py
flask-app/app/tools/: rekognise_utils.py  s3_utils.py
graph/: graph.py
model/: AgentState.py
nodes/: analyse_photo_node.py  upload_node.py
terraform/: main.tf  outputs.tf  variables.tf
tools/: rekognise_utils.py  s3_utils.py
