[tool.poetry]
name = "app"
version = "0.1.0"
description = "Flask application for AWS S3 image storage"
authors = ["hammad.yaqoob1985@yahoo.co.uk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
boto3 = "^1.35.0"
python-dotenv = "^1.0.1"
langchain = "^0.3.27"
langgraph = "^0.6.6"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
